Fixed layout bug.

--- a/assets/scss/templates/_our_advisors.scss
+++ b/assets/scss/templates/_our_advisors.scss
@@ -71,6 +71,8 @@ section.page.interior-b.our-advisors
                     p
                     {
                         font-size: .95em;
+                        margin-left: 0;
+                        margin-right: 0;
                         
                         &:last-child
                         {
